--- a/docs/index.css
+++ b/docs/index.css
@@ -20,6 +20,11 @@ h1{
     color: white;
 }
 
+a {
+    text-decoration: none; 
+    color: white; 
+}
+
 /* Quadro branco que mostra a hora e imagem */
 .quadro_menor{
     background-color: white;
@@ -62,6 +67,7 @@ h1{
     width: 230px;
     height: 230px;
     } 
+
 
 
 }
